--- a/src/components/ExpenseItem.css
+++ b/src/components/ExpenseItem.css
@@ -38,13 +38,19 @@
     border-radius: 12px;
 
   }
+  
   .expense-item__location{
-    color:white;
-    font: 1rem;
     font-weight: bold;
-    padding: 0.5rem;
-
+    color: white;
+    align-items: flex-start;
+    flex-flow: column-reverse;
+    justify-content: center;
+    flex: 3;
+    display: flex;
+    
   }
+
+  
   
   @media (min-width: 580px) {
     .expense-item__description {
@@ -59,8 +65,8 @@
     }
     
     .expense-item__location{
-        font-size: 1.25rem;
-        padding: 0.5rem 1.5rem;
+      font-size: 1.25rem;
+    
 
     }
     .expense-item__price {
