--- a/src/components/EXPENSES/ExpenseDate.css
+++ b/src/components/EXPENSES/ExpenseDate.css
@@ -5,7 +5,7 @@
     height: 5.5rem;
     border: 1px solid #ececec;
     background-color: #2a2a2a;
-    color: white;
+    color:aqua;
     border-radius: 12px;
     align-items: center;
     justify-content: center;
@@ -18,6 +18,7 @@
   
   .expense-date__year {
     font-size: 0.75rem;
+    font-weight: bold;
   }
   
   .expense-date__day {
